add convert endpoint to API docs
