# routes/index.js
@@ -3,12 +3,13 @@ var router = express.Router();
 const converter = require('./api/converter');
 
 /* GET home page. */
+router.post('/convert', converter.getCurrencyRate);  // params in req.body
+
 router.get('/', function(req, res, next) {
   
   res.redirect("/doc");
 
 });
 
-router.post('/convert', converter.getCurrencyRate);  // params in req.body
 
 module.exports = router;
